updated how api endpoint handlers are getting registered + some react hosting fixes + changed default DATA_DIR to WORKING_DIRECTORY/data + updated documentation
